# jqr

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: ast.rs  builtins.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  value.rs
