[package]
name = "jqr"
version = "0.1.0"
edition = "2021"
description = "A jq implementation in Rust"
license = "MIT"
keywords = ["jq", "json", "cli", "parser"]
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/EvanL1/jqr"

[dependencies]
nom = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0"
indexmap = { version = "2.0", features = ["serde"] }

[lib]
name = "jqr"
path = "src/lib.rs"

[[bin]]
name = "jqr"
path = "src/main.rs"
